--- a/gameover/retry.html
+++ b/gameover/retry.html
@@ -17,7 +17,7 @@
 
 <script type="text/javascript">
     document.getElementById("retry").onclick = function () {
-        location.href = "../index.html";
+        location.href = "../game.html";
     };
     
     
