--- a/victoryscreen/victory.html
+++ b/victoryscreen/victory.html
@@ -17,7 +17,7 @@
 
 <script type="text/javascript">
     document.getElementById("startover").onclick = function () {
-        location.href = "../index.html";
+        location.href = "../game.html";
     };
     
     
